rnsc/tests/snapshots/general-inner_class-super_explicit_utf8.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## OuterClass$Inner ##
.class OuterClass$Inner
.super java/lang/Object

.class_end

## OuterClass ##
.class public OuterClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that .super inside .inner with explicit @utf8 type hint overrides implicit @class.
; Note: javap fails to parse because super_class must be Class entry per JVM spec.
; Expected: success, javap fails

.class public OuterClass
.super java/lang/Object

.inner Inner
    .super @utf8 java/lang/Object
.inner_end

.class_end
----- STDERR -----

----- JAVAP -----
## OuterClass$Inner ##
javap failed

## OuterClass ##
Classfile <TEMP_DIR>/OuterClass.class
  Last modified <DATE>; size 123 bytes
  SHA-256 checksum f51a9dc47b4fbaa73283871583ea04404bfabcc4773f7b3bcebfa3dca0cd55fa
public class OuterClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // OuterClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // OuterClass
  #4 = Utf8               OuterClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               Inner
  #7 = Class              #8              // OuterClass$Inner
  #8 = Utf8               OuterClass$Inner
{
}
InnerClasses:
  #6= #7 of #3;                           // Inner=class OuterClass$Inner of class OuterClass
