rnsc/tests/snapshots/general-inner_class-with_flags.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## OuterClass$StaticNested ##
.class public final OuterClass$StaticNested
.super java/lang/Object

.class_end

## OuterClass ##
.class public OuterClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests inner class with class-level access flags.
; Expected: success, inner class file shows ACC_PUBLIC | ACC_FINAL

.class public OuterClass
.super java/lang/Object

.inner public final StaticNested
    .super java/lang/Object
.inner_end

.class_end
----- STDERR -----

----- JAVAP -----
## OuterClass$StaticNested ##
Classfile <TEMP_DIR>/OuterClass$StaticNested.class
  Last modified <DATE>; size 137 bytes
  SHA-256 checksum b68df2dd279174c9d6fd8a5d5b296e425f07b77cb163a6c09a9139f95843e332
public final class OuterClass$StaticNested
  minor version: 0
  major version: 69
  flags: (0x0011) ACC_PUBLIC, ACC_FINAL
  this_class: #3                          // OuterClass$StaticNested
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // OuterClass$StaticNested
  #4 = Utf8               OuterClass$StaticNested
  #5 = Class              #6              // OuterClass
  #6 = Utf8               OuterClass
  #7 = Utf8               StaticNested
  #8 = Utf8               InnerClasses
{
}
InnerClasses:
  #7= #3 of #5;                           // StaticNested=class OuterClass$StaticNested of class OuterClass

## OuterClass ##
Classfile <TEMP_DIR>/OuterClass.class
  Last modified <DATE>; size 137 bytes
  SHA-256 checksum 59980656ee808323d5dfbad55dd57c86319ec2620139a878de80af628da192c9
public class OuterClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // OuterClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // OuterClass
  #4 = Utf8               OuterClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               StaticNested
  #7 = Class              #8              // OuterClass$StaticNested
  #8 = Utf8               OuterClass$StaticNested
{
}
InnerClasses:
  #6= #7 of #3;                           // StaticNested=class OuterClass$StaticNested of class OuterClass
