rnsc/tests/snapshots/general-inner_class-with_super.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## OuterClass$Inner ##
.class OuterClass$Inner
.super com/profs/CustomParent

.class_end

## OuterClass ##
.class public OuterClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests inner class with explicit .super directive.
; Expected: success, inner class has correct super class

.class public OuterClass
.super java/lang/Object

.inner Inner
    .super com/profs/CustomParent
.inner_end

.class_end
----- STDERR -----

----- JAVAP -----
## OuterClass$Inner ##
Classfile <TEMP_DIR>/OuterClass$Inner.class
  Last modified <DATE>; size 129 bytes
  SHA-256 checksum efaa043b8277ec44225e8dd1982910abd627abb189837d1fb0ea90be3db5b712
class OuterClass$Inner extends com.profs.CustomParent
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // OuterClass$Inner
  super_class: #1                         // com/profs/CustomParent
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // com/profs/CustomParent
  #2 = Utf8               com/profs/CustomParent
  #3 = Class              #4              // OuterClass$Inner
  #4 = Utf8               OuterClass$Inner
  #5 = Class              #6              // OuterClass
  #6 = Utf8               OuterClass
  #7 = Utf8               Inner
  #8 = Utf8               InnerClasses
{
}
InnerClasses:
  #7= #3 of #5;                           // Inner=class OuterClass$Inner of class OuterClass

## OuterClass ##
Classfile <TEMP_DIR>/OuterClass.class
  Last modified <DATE>; size 123 bytes
  SHA-256 checksum f51a9dc47b4fbaa73283871583ea04404bfabcc4773f7b3bcebfa3dca0cd55fa
public class OuterClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // OuterClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // OuterClass
  #4 = Utf8               OuterClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               Inner
  #7 = Class              #8              // OuterClass$Inner
  #8 = Utf8               OuterClass$Inner
{
}
InnerClasses:
  #6= #7 of #3;                           // Inner=class OuterClass$Inner of class OuterClass
