rnsc/tests/snapshots/general-invokespecial_explicit_utf8.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public MyClass
.super java/lang/Object

.method public <init> ()V
    .code stack 1 locals 1
      aload_0
      invokespecial some_value
      return
    .code_end
.method_end
.class_end
----- INPUT -----
; Tests that invokespecial with explicit @utf8 type hint stores operand as Utf8 instead of Methodref.
; Expected: success, javap shows Utf8 entry for invokespecial operand

.class public MyClass
.super java/lang/Object

.method public <init> ()V
    .code stack 1 locals 1
      aload_0
      invokespecial @utf8 some_value
      return
    .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 125 bytes
  SHA-256 checksum f6ec2531c238dcde955f50c1cede7f9624eb36adbceb5b25c371f9fd483d35ae
public class MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 1, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               <init>
  #6 = Utf8               ()V
  #7 = Utf8               some_value
  #8 = Utf8               Code
{
  public MyClass();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code:
      stack=1, locals=1, args_size=1
         0: aload_0
Error: Not a MemberRefEntry at index: 7
         1: invokespecial ???
         4: return
}
