rnsc/tests/snapshots/general-invokestatic_explicit_utf8.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public MyClass
.super java/lang/Object

.method public static main ()V
    .code stack 1 locals 1
      invokestatic
      return
    .code_end
.method_end
.class_end
----- INPUT -----
; Tests that invokestatic with explicit @utf8 type hint stores operand as Utf8 instead of Methodref.
; Expected: success, javap shows Utf8 entry for invokestatic operand

.class public MyClass
.super java/lang/Object

.method public static main ()V
    .code stack 1 locals 1
      invokestatic @utf8 some_value
      return
    .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 122 bytes
  SHA-256 checksum 7eca85e681b961cca572abff0bf36dc64ae14f3248e9b6f3ff297f7ee5435a83
public class MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 1, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               main
  #6 = Utf8               ()V
  #7 = Utf8               some_value
  #8 = Utf8               Code
{
  public static void main();
    descriptor: ()V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code:
      stack=1, locals=1, args_size=0
Error: Not a MemberRefEntry at index: 7
         0: invokestatic  ???
         3: return
}
