rnsc/tests/snapshots/general-mangled_name-string_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
## MyClass ##
.class public MyClass
.super java/lang/Object

.class_end

## MyMangledName ##
.class MyMangledName
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a quoted string used as mangled name is handled.
; Expected: the quoted string is treated as an identifier, no diagnostics

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name "MyMangledName"
.inner_end

.class_end
----- STDERR -----

----- JAVAP -----
## MyClass ##
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 117 bytes
  SHA-256 checksum ff1e0cbc0caf1b31e80bc1e74ec9e3d84bffeed65ba277ef4be29a987e57313a
public class MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               InnerClasses
  #6 = Utf8               Inner
  #7 = Class              #8              // MyMangledName
  #8 = Utf8               MyMangledName
{
}
InnerClasses:
  #6= #7 of #3;                           // Inner=class MyMangledName of class MyClass

## MyMangledName ##
Classfile <TEMP_DIR>/MyMangledName.class
  Last modified <DATE>; size 117 bytes
  SHA-256 checksum 2f1c762d0cb9c4fea105f274edff83a41138d53a2e7a53e825e1e437c6dee5af
class MyMangledName
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MyMangledName
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyMangledName
  #4 = Utf8               MyMangledName
  #5 = Class              #6              // MyClass
  #6 = Utf8               MyClass
  #7 = Utf8               Inner
  #8 = Utf8               InnerClasses
{
}
InnerClasses:
  #7= #3 of #5;                           // Inner=class MyMangledName of class MyClass
